--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4.1.17",
     "merge-anything": "^4.0.1",
     "next": "^10.2.3",
+    "next-compose-plugins": "^2.2.1",
     "next-connect": "^0.10.1",
     "next-nprogress-emotion": "^2.0.0",
     "passport": "^0.4.1",
