--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@chakra-ui/cli": "^1.3.1",
     "@types/node": "^15.6.2",
+    "@types/passport": "^0",
+    "@types/passport-local": "^1",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
     "prettier": "^2.3.0",
