--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@emotion/styled": "^11.3.0",
     "@hapi/iron": "6.0.0",
     "a11y-react-emoji": "^1.1.3",
-    "cookie": "0.4.1",
+    "cookie": "^0.4.1",
     "framer-motion": "^4.1.17",
     "merge-anything": "^4.0.1",
     "next": "^10.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-connect": "^0.10.1",
     "next-nprogress-emotion": "^2.0.0",
+    "nookies": "^2.5.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "react": "^17.0.2",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@chakra-ui/cli": "^1.3.1",
+    "@types/cookie": "^0",
     "@types/node": "^15.6.2",
     "@types/passport": "^0",
     "@types/passport-local": "^1",
