--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
-    "react-icons": "^4.2.0",
+    "react-feather": "^2.0.9",
     "swr": "^0.5.6",
     "uuidv4": "6.2.8"
   },
