--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@hapi/iron": "6.0.0",
     "a11y-react-emoji": "^1.1.3",
-    "cookie": "^0.4.1",
+    "express-session": "^1.17.2",
     "framer-motion": "^4.1.17",
     "merge-anything": "^4.0.1",
     "next": "^10.2.3",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@chakra-ui/cli": "^1.3.1",
-    "@types/cookie": "^0",
+    "@types/express-session": "^1",
     "@types/node": "^15.6.2",
     "@types/passport": "^0",
     "@types/passport-local": "^1",
