--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,7 @@
       "type": "chrome",
       "request": "launch",
       "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}",
-      "userDataDir": false
+      "webRoot": "${workspaceFolder}"
     }
   ],
   "compounds": [
