--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@hapi/iron": "6.0.0",
     "a11y-react-emoji": "^1.1.3",
+    "axios": "^0.21.1",
     "express-session": "^1.17.2",
     "framer-motion": "^4.1.17",
     "merge-anything": "^4.0.1",
@@ -29,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-feather": "^2.0.9",
+    "react-query": "^3.16.0",
     "swr": "^0.5.6",
     "uuidv4": "6.2.8"
   },
