--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@hapi/iron": "6.0.0",
+    "@hookform/resolvers": "^2.5.2",
     "a11y-react-emoji": "^1.1.3",
     "axios": "^0.21.1",
     "express-session": "^1.17.2",
@@ -30,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-feather": "^2.0.9",
+    "react-hook-form": "^7.8.1",
     "react-query": "^3.16.0",
     "swr": "^0.5.6",
     "uuidv4": "6.2.8"
