--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/iron": "6.0.0",
     "@hookform/resolvers": "^2.5.2",
     "a11y-react-emoji": "^1.1.3",
+    "argon2": "^0.28.1",
     "axios": "^0.21.1",
     "express-session": "^1.17.2",
     "framer-motion": "^4.1.17",
