--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-# Secrets like the one below should go into `.env.local` instead to avoid pushing
-# them to a repository, this is an exception for the sake of the example
+NEXT_PUBLIC_GRAPHQL_API_URL=
+NEXT_PUBLIC_FORMSPREE_PROJECT_ID=
+
 TOKEN_SECRET=
+FORMSPREE_DEPLOY_KEY=
