--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "yarn codegen:theme && next build",
     "start": "next start",
-    "codegen:theme": "chakra-cli tokens src/styles/theme/index.ts"
+    "generate:theme-typings": "chakra-cli tokens src/styles/theme/index.ts",
+    "generate:favicons": "node -r esbuild-register scripts/generate-favicons.ts",
+    "generate:rss": "node -r esbuild-register scripts/generate-favicons.ts",
+    "generate:sitemap": "node -r esbuild-register scripts/generate-favicons.ts",
+    "forms:deploy": "formspree deploy -k $FORMSPREE_DEPLOY_KEY"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
@@ -13,6 +17,7 @@
     "@chakra-ui/theme-tools": "^1.1.7",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@formspree/react": "^2.2.3",
     "@hapi/iron": "6.0.0",
     "@hookform/resolvers": "^2.5.2",
     "a11y-react-emoji": "^1.1.3",
@@ -20,6 +25,8 @@
     "axios": "^0.21.1",
     "express-session": "^1.17.2",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "merge-anything": "^4.0.1",
     "next": "^10.2.3",
     "next-compose-plugins": "^2.2.1",
@@ -32,20 +39,27 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-feather": "^2.0.9",
-    "react-hook-form": "^7.8.3",
-    "react-query": "^3.16.1",
+    "react-hook-form": "^7.8.4",
+    "react-query": "^3.17.0",
     "swr": "^0.5.6",
     "uuidv4": "6.2.10"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^1.3.1",
+    "@formspree/cli": "^0.9.6",
+    "@graphql-codegen/cli": "^1.21.5",
+    "@graphql-codegen/typescript": "^1.22.1",
+    "@graphql-codegen/typescript-operations": "^1.18.0",
+    "@graphql-codegen/typescript-react-query": "^1.3.1",
     "@types/express-session": "^1.17.3",
     "@types/node": "^15.12.2",
     "@types/passport": "^1.0.6",
     "@types/passport-local": "^1.0.33",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "esbuild-register": "^2.6.0",
     "prettier": "^2.3.1",
+    "prisma": "^2.24.1",
     "typescript": "^4.3.2"
   }
 }
